--- a/.github/workflows/publish-nuget-pack.yml
+++ b/.github/workflows/publish-nuget-pack.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Publish  
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
-        PROJECT_FILE_PATH: src/LnzSoftware.Swashbuckle.AspNetCore.GenericTypeResponseFilter.csproj 
+        PROJECT_FILE_PATH: src/LnzSoftware.Swashbuckle.GenericTypeResponseFilter.csproj 
         NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
